--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ comrak = { version = "0.4.0", default-features = false }
 ammonia = "3.0.0"
 docopt = "1.0"
 scheduled-thread-pool = "0.2.0"
-derive_deref = "1.0.0"
+derive_deref = { version = "1.0.0", git = "https://github.com/azriel91/derive_deref.git", rev = "63527ab" }
 reqwest = { version = "0.10", features = ["blocking", "gzip", "json"] }
 tempfile = "3"
 parking_lot = "0.10"
