--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2018"
 conduit = "0.9.0-alpha.2"
 hyper = "0.13"
 http = "0.2"
+percent-encoding = "2"
 tracing = { version = "0.1", features = ["log"] }
 tokio = { version = "0.2", features = ["blocking", "fs", "rt-threaded", "stream"] }
 tower-service = "0.3"
