allow configuring the application's domain name
This commit allows setting the DOMAIN_NAME environment variable, which
configures the domain name used in absolute URLs returned by the
application, for example in emails or Cargo responses.

The scenario that prompted this change is when an user creates an
account on the staging instance: before this commit the link they'd get
in the verification email was invalid, as the production application
doesn't know staging's email verification codes.

If the variable is omitted the domain will default to "crates.io".

--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,10 @@ export DATABASE_URL=
 # If you are running a mirror of crates.io, uncomment this line.
 # export MIRROR=1
 
+# If you're running an instance of the application on a domain different than
+# crates.io, uncomment this line and set the variable to your domain name.
+#export DOMAIN_NAME=staging.crates.io
+
 # Key to sign and encrypt cookies with. Must be at least 32 bytes. Change this
 # to a long, random string for production.
 export SESSION_KEY=badkeyabcdefghijklmnopqrstuvwxyzabcdef
