Obtain allowed origin list from the environment
This adapts the scheme added in #2627. When operating behind
CloudFront, the Host received by nginx is the Heroku instance and does
not match the user facing crates.io origin. Therefore it is necessary to
obtain a list of allowed origins at boot time.

If this header is not set, the server will panic and will not boot.

--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,10 @@
 # `postgres://postgres@localhost/cargo_registry`.
 export DATABASE_URL=
 
+# Allowed origins - any origins for which you want to allow browser
+# access to authenticated endpoints.
+export WEB_ALLOWED_ORIGINS=http://localhost:8888,http://localhost:4200
+
 # If you are running a mirror of crates.io, uncomment this line.
 # export MIRROR=1
 
