--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ indexmap = "1.0.2"
 jemallocator = { version = "0.3", features = ['unprefixed_malloc_on_supported_platforms', 'profiling'] }
 lettre = { version = "0.10.0-beta.3", default-features = false, features = ["file-transport", "smtp-transport", "native-tls", "hostname", "builder"] }
 license-exprs = "1.6"
-oauth2 = { version = "4.0.0-beta.1", default-features = false, features = ["reqwest"] }
+oauth2 = { version = "4.0.0", default-features = false, features = ["reqwest"] }
 parking_lot = "0.11"
 prometheus = "0.12.0"
 rand = "0.8"
