Include only the last 90 days of downloads in our database dumps

--- a/src/tasks/dump_db/dump-db.toml
+++ b/src/tasks/dump_db/dump-db.toml
@@ -188,6 +188,7 @@ name = "public"
 
 [version_downloads]
 dependencies = ["versions"]
+filter = "date > current_date - interval '90 day'"
 [version_downloads.columns]
 version_id = "public"
 downloads = "public"
