Drop crates.textsearchable_index_col from the export
This column is postgres specific and is normally populated via a
trigger. The trigger is now enabled during the import so that the column
can be dropped from the export.

--- a/src/tasks/dump_db/dump-db.toml
+++ b/src/tasks/dump_db/dump-db.toml
@@ -82,7 +82,7 @@ description = "public"
 homepage = "public"
 documentation = "public"
 readme = "public"
-textsearchable_index_col = "public"
+textsearchable_index_col = "private" # This Postgres specific and can be derived from exported data
 repository = "public"
 max_upload_size = "public"
 
