--- a/package.json
+++ b/package.json
@@ -126,7 +126,8 @@
     "qunit": "2.15.0",
     "qunit-console-grouper": "0.3.0",
     "qunit-dom": "1.6.0",
-    "timekeeper": "2.2.0"
+    "timekeeper": "2.2.0",
+    "webpack": "5.37.0"
   },
   "resolutions": {
     "ember-inflector": "4.0.1"
