Add `postcss` resolution
`yarn-deduplicate` has some unintended behavior that would otherwise revert the PostCSS update. With this commit we can ensure that `ember-css-modules` uses PostCSS v8 instead of v7.

--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "webpack": "5.37.0"
   },
   "resolutions": {
+    "ember-css-modules/postcss": "8.2.15",
     "ember-inflector": "4.0.1"
   },
   "engines": {
