--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ prometheus = "0.12.0"
 rand = "0.8"
 reqwest = { version = "0.11", features = ["blocking", "gzip", "json"] }
 scheduled-thread-pool = "0.2.0"
-semver = { version = "0.10", features = ["diesel", "serde"] }
+semver = { version = "1.0.3", features = ["serde"] }
 sentry = "0.22"
 serde = { version = "1.0.0", features = ["derive"] }
 serde_json = "1.0.0"
