--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,10 @@ jobs:
     name: Backend (linting)
     runs-on: ubuntu-20.04
 
+    env:
+      CARGO_INCREMENTAL: 0
+      RUSTFLAGS: "-D warnings"
+
     steps:
       - uses: actions/checkout@v2
 
