Pin to an old compiler for linting on CI
1.53.0 is to be released tomorrow, and currently has a clippy regression
that causes an ICE.

https://internals.rust-lang.org/t/1-53-0-prerelease-testing/14884/2?u=jtgeibel

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,8 +102,9 @@ jobs:
       - name: Install Rust
         run: |
           rustup set profile minimal
-          rustup update stable
-          rustup default stable
+          # Pin to older version until a clippy regression is fixed
+          rustup update 1.52.1
+          rustup default 1.52.1
 
       - run: rustup component add rustfmt
       - run: rustup component add clippy
