--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,7 +104,7 @@ jobs:
           rustup set profile minimal
           # Pin to older version until a clippy regression is fixed
           rustup update 1.53.0
-          rustup default 1.53.0
+          rustup override set 1.53.0
 
       - run: rustup component add rustfmt
       - run: rustup component add clippy
@@ -192,7 +192,7 @@ jobs:
           fi
           rustup set profile minimal
           rustup update ${{ matrix.rust }}
-          rustup default ${{ matrix.rust }}
+          rustup override set ${{ matrix.rust }}
 
       - id: rustc
         run:
